--- a/Contact.html
+++ b/Contact.html
@@ -15,24 +15,24 @@
 
 <body>
     <header>
-        <div>
-            <ul class="navbar"> 
-                <li><a href="index.html" class="active col-12  col-2"><i class="fa fa-home fa-lg"> Home</i></a></li>
-                <li><a href="Classes.html" class=" col-12  col-2"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
-                <li><a href="News.html" class=" col-12  col-2"><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
-                <li><a href="Testimonial.html" class=" col-12  col-2"><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
-                <li><a href="Gallery.html" class=" col-12  col-2"><i class="fa fa-image fa-lg"> Gallery</i></a></li>
-                <li><a href="Contact.html" class=" col-12  col-2"><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
-            </ul>
-            </div>  
-         <div> 
+        <div> 
             <li><i class="bars fa fa-bars"> MENU </i></li>
-        </div> 
-    </header>
-    <section class="container-fluid">
-        <div class="logo">
+            <div class="logo">
             <!---logo--->
         </div>
+        </div>
+        <div>
+            <ul class="navbar"> 
+                <li><a href="index.html" ><i class="fa fa-home fa-lg"> Home</i></a></li>
+                <li><a href="Classes.html" ><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
+                <li><a href="News.html" ><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
+                <li><a href="Testimonial.html" ><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
+                <li><a href="Gallery.html" ><i class="fa fa-image fa-lg"> Gallery</i></a></li>
+                <li><a href="Contact.html" class="active "><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
+            </ul>
+            </div>  
+    </header>
+    <section class="container-fluid1">
         <div class="row">
             <div class="col-12 layout">
                 <h3 class="contact-heading  text-center">CONTACT US!</h3>
