--- a/Gallery.html
+++ b/Gallery.html
@@ -15,59 +15,54 @@
 
 <body>
     <header>
-        <div>
-            <ul class="navbar"> 
-                <li><a href="index.html" class="active col-12  col-2"><i class="fa fa-home fa-lg"> Home</i></a></li>
-                <li><a href="Classes.html" class=" col-12  col-2"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
-                <li><a href="News.html" class=" col-12  col-2"><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
-                <li><a href="Testimonial.html" class=" col-12  col-2"><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
-                <li><a href="Gallery.html" class=" col-12  col-2"><i class="fa fa-image fa-lg"> Gallery</i></a></li>
-                <li><a href="Contact.html" class=" col-12  col-2"><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
-            </ul>
-            </div>  
-         <div> 
-            <li><i class="bars fa fa-bars"> MENU </i></li>
-        </div> 
-    </header>
-    <section class="container-fluid">
         <div class="logo">
-            <!---logo--->
+            <li><i class="bars fa fa-bars"> MENU </i></li>
         </div>
+        <div>
+            <ul class="navbar">
+                <li><a href="index.html"><i class="fa fa-home fa-lg"> Home</i></a></li>
+                <li><a href="Classes.html"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
+                <li><a href="News.html"><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
+                <li><a href="Testimonial.html"><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
+                <li><a href="Gallery.html" class="active "><i class="fa fa-image fa-lg"> Gallery</i></a></li>
+                <li><a href="Contact.html"><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
+            </ul>
+        </div>
+    </header>
+    <section class="container-fluid1">
         <h2 class=heading>Gallery</h2>
-        <div class="row">
-            <div class="col-sm3 gallery text-center">
+        <div class="row galleryheight">
+            <div class=" gallery text-center">
                 <img src="assets/images/westexpo.jpg" alt="West Expo" width=300 height=200>
-                <h6>Students attending West Expo</h6>
+                <h5>Students attending West Expo</h6>
             </div>
-            <div class="col-sm3 gallery text-center">
+            <div class=" gallery text-center">
                 <img src="assets/images/WestExpo2.jpg" alt="West Expo2" width=300 height=200>
-                <h6>Preparing for West Expo</h6>
+                <h5>Preparing for West Expo</h6>
             </div>
-            <div class="col-sm3 gallery text-center">
-                <img src="assets/images/permstudentspic.jpg" alt="perm students pic" width=300 height=200>
-                <h6>Perm State Ballet</h6>
-            </div>
-            <div class="col-sm3 gallery text-center">
-                <img src="assets/images/vitaliystudents.jpg" alt="vitaliy students" width=300 height=200>
-                <h6>Perm principal student workshop</h6>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm3 gallery text-center">
-                <img src="assets/images/ARAS.jpg" alt="ARAS" width=300 height=200>
-                <h6>Students meeting the President</h6>
-            </div>
-            <div class="col-sm3 gallery text-center">
+            <div class=" gallery text-center">
                 <img src="assets/images/Mikediskin.jpg" alt="Mikediskin" width=300 height=200>
-                <h6>Mike Diskin Memorial event</h6>
+                <h5>Mike Diskin Memorial event</h6>
             </div>
-            <div class="col-sm3 gallery text-center">
+            <div class=" gallery text-center">
+                <img src="assets/images/permstudentspic.jpg" alt="perm students pic" width=300 height=200>
+                <h5>Perm State Ballet</h6>
+            </div>
+            <div class="gallery text-center">
+                <img src="assets/images/vitaliystudents.jpg" alt="vitaliy students" width=300 height=200>
+                <h5>Perm principal student workshop</h6>
+            </div>
+            <div class="gallery text-center">
+                <img src="assets/images/ARAS.jpg" alt="ARAS" width=300 height=200>
+                <h5>Students meeting the President</h6>
+            </div>
+            <div class="gallery text-center">
                 <img src="assets/images/dance-festival.jpg" alt="dance-festival" width=300 height=200>
-                <h6>Students at the dance festival</h6>
+                <h5>Students at the dance festival</h6>
             </div>
-            <div class="col-sm3 gallery text-center">
+            <div class="gallery text-center">
                 <img src="assets/images/daffodilevent.jpg" alt="daffodil event" width=300 height=200>
-                <h6>Students at daffodil day</h6>
+                <h5>Students at daffodil day</h6>
             </div>
         </div>
     </section>
