--- a/index.html
+++ b/index.html
@@ -15,35 +15,28 @@
 
 <body>
     <header>
+         <div class="logo">
+            <li><i class="bars fa fa-bars"> MENU </i></li>
+        </div>
         <div>
             <ul class="navbar"> 
-                <li><a href="index.html" class="active col-12  col-2"><i class="fa fa-home fa-lg"> Home</i></a></li>
-                <li><a href="Classes.html" class=" col-12  col-2"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
-                <li><a href="News.html" class=" col-12  col-2"><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
-                <li><a href="Testimonial.html" class=" col-12  col-2"><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
-                <li><a href="Gallery.html" class=" col-12  col-2"><i class="fa fa-image fa-lg"> Gallery</i></a></li>
-                <li><a href="Contact.html" class=" col-12  col-2"><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
+                <li><a href="index.html" class="active "><i class="fa fa-home fa-lg"> Home</i></a></li>
+                <li><a href="Classes.html" ><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
+                <li><a href="News.html" ><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
+                <li><a href="Testimonial.html" ><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
+                <li><a href="Gallery.html" ><i class="fa fa-image fa-lg"> Gallery</i></a></li>
+                <li><a href="Contact.html" ><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
             </ul>
             </div>  
-         <div> 
-            <li><i class="bars fa fa-bars"> MENU </i></li>
-        </div> 
     </header>
-    <section>
-        <div class="logo">
-            <!---logo--->
-        </div>
-
+    <section class="container-fluid1">
         <div class="row margin ">
             <div class="col-sm-6 paragraph ">
                 <h4 class="headerstyle">About Regina Rogers</h4>
                 <p class="parastyle">
                     Regina Rogers B.A. H.Dip in Ed Director Regina Rogers has been dancing since the age of 4 and teaching since 1986. Her mother, Marie Langan was a well known Ballet teacher who taught in Galway and Mayo. Marie trained in London and Paris and was a cousin
                     of Patricia Ryan who was Artistic Director of the Irish National Ballet Company during the late 50′s and early 60′s. Regina also worked with the prestigious Bertha Carr School of Dance whilst living in th U.S. (Rhode Island) and also
-                    took Master classes at Boston Ballet. In 1995 Regina first brought the renowned Russian Ballet to Ireland with the intention of exposing students and audiences to the best of ballet. Since 1996 the Perm State Ballet of Russia have
-                    come to Galway on a regular basis and their performance is a gem in Galway’s theatrical calendar. This has greatly enhanced the appreciation of Ballet as an accessible artform in Ireland. Two years ago, Regina Rogers was honoured by
-                    the Perm State Ballet of Russia when she was invited to sit on a panel of jurors at the prestigious Arabesque Ballet Competition in Russia. The Director and founder of this competition is the renowned Vladimir Vasiliev, former Director
-                    and Dancer of the famous Bolshoi Ballet.
+                    took Master classes at Boston Ballet. 
                 </p>
                 <img src="assets/images/regina.jpg" alt="Regina picture" class="picdimensions" />
             </div>
