fixed contact form

--- a/TEST.html
+++ b/TEST.html
@@ -34,7 +34,7 @@
     </header>
     <section class="container-fluid1">
         <div class="row">
-            <div class="col-12">
+            <div >
                 <h3 class="contact-heading  text-center">CONTACT US!</h3>
                 <h5 class="text-center">Want to get in touch! Please use the contact form below. We will try to respond ASAP</h5>
                 </br>
