added video to news and removed pic in index for mobile

--- a/News.html
+++ b/News.html
@@ -15,23 +15,23 @@
 
 <body>
     <header>
-        <div> 
+        <div>
             <li><i class="bars fa fa-bars"> MENU </i></li>
             <div class="logo">
-            <!---logo--->
-        </div>
+                <!---logo--->
+            </div>
         </div>
         <div>
-            <ul class="navbar"> 
-                <li><a href="index.html" ><i class="fa fa-home fa-lg"> Home</i></a></li>
-                <li><a href="Classes.html" ><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
+            <ul class="navbar">
+                <li><a href="index.html"><i class="fa fa-home fa-lg"> Home</i></a></li>
+                <li><a href="Classes.html"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
                 <li><a href="News.html" class="active "><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
-                <li><a href="Testimonial.html" ><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
-                <li><a href="Gallery.html" ><i class="fa fa-image fa-lg"> Gallery</i></a></li>
-                <li><a href="Contact.html" ><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
+                <li><a href="Testimonial.html"><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
+                <li><a href="Gallery.html"><i class="fa fa-image fa-lg"> Gallery</i></a></li>
+                <li><a href="Contact.html"><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
             </ul>
-            </div>  
-          
+        </div>
+
     </header>
     <section class="container-fluid1">
         <div>
@@ -76,6 +76,14 @@
                     <img src="assets/images/NationalDanceChamps.jpg" alt="National Dance Champs" class="center">
                     </br>
                     <p class="fontsize">Our second and third terms were spent preparing for the National Dance Championships and Twilight Competitions where the girls picked up several awards” Thank you to everyone!</p>
+                </div>
+                <div>
+                    <h6 class="newsheader">Video of Perm masterclass</h6>
+                    </br>
+                    <video class="video center"  controls>
+                          <source src="assets/images/Video.mp4" type="video/mp4">
+                    </video>
+                    <p class="fontsize">Congratulations to the students who attended the recent masterclass hosted by Perm state ballet. Great experience for all our students.</p>
                 </div>
             </div>
 
