update picture file names

--- a/gallery.html
+++ b/gallery.html
@@ -37,11 +37,11 @@
                 <h5>Students attending West Expo</h5>
             </div>
             <div class="gallery text-center">
-                <img src="assets/images/WestExpo2.jpg" alt="West Expo2" width=300 height=200>
+                <img src="assets/images/westexpo2.jpg" alt="West Expo2" width=300 height=200>
                 <h5>Preparing for West Expo</h5>
             </div>
             <div class="gallery text-center">
-                <img src="assets/images/Mikediskin.jpg" alt="Mikediskin" width=300 height=200>
+                <img src="assets/images/mikediskin.jpg" alt="Mikediskin" width=300 height=200>
                 <h5>Mike Diskin Memorial event</h5>
             </div>
             <div class="gallery text-center">
@@ -53,7 +53,7 @@
                 <h5>Perm principal student workshop</h5>
             </div>
             <div class="gallery text-center">
-                <img src="assets/images/ARAS.jpg" alt="ARAS" width=300 height=200>
+                <img src="assets/images/aras.jpg" alt="ARAS" width=300 height=200>
                 <h5>Students meeting the President</h5>
             </div>
             <div class="gallery text-center">
