--- a/news.html
+++ b/news.html
@@ -39,37 +39,37 @@
                 <div class="col-lg-6  news">
                     <h6 class="newsheader">New Beginners Ballet</h6>
                     <p class="fontsize">New beginners ballet at Cappagh Community Centre, starts Saturday. For more information please contact Regina.</p>
-                    <img src="assets/images/newBeginnersBallet.jpg" alt="New Beginners Ballet" class="center pic1">
+                    <img src="assets/images/new_beginners_ballet.jpg" alt="New Beginners Ballet" class="center pic1">
                 </div>
                 <div class=" col-lg-6 news">
                     <h6 class="newsheader">Summer Camp</h6>
                     <p class="fontsize">We will be holding summer dance camps 1st and 3rd weeks of August for ages 8-16. Please contact us for more information.</p>
-                    <img src="assets/images/summerCamp.jpg " alt="Summer Camp" class="center pic1">
+                    <img src="assets/images/summercamp.jpg " alt="Summer Camp" class="center pic1">
                 </div>
             </div>
             <div class="row row1">
                 <div class="col-lg-6 news">
                     <h6 class="newsheader">Masterclasses with Katherine Lewis</h6>
                     <p class="fontsize">We had wonderful Ballet Masterclasses with our dear Katherine Lewis who we will miss hugely! Katherine was an inspiration and so kind to every single student she encountered.</p>
-                    <img src="assets/images/MidTermWorkshop.jpg" alt="MidTerm Workshop" class="center pic1">
+                    <img src="assets/images/midtermworkshop.jpg" alt="MidTerm Workshop" class="center pic1">
                 </div>
                 <div class="col-lg-6 news">
                     <h6 class="newsheader">October Exams</h6>
                     <p class="fontsize">Exams for grades 1 - 3 will be held on 18th October in our Galway Studio. Please contact us for more information.</p>
-                    <img src="assets/images/balletExams.jpg" alt="Oct exams" class="center pic1">
+                    <img src="assets/images/ballet_exams.jpg" alt="Oct exams" class="center pic1">
                 </div>
             </div>
             <div class="row row1">
                 <div class="col-lg-6 news">
                     <h6 class="newsheader">National Dance Championships 2019</h6>
                     <p class="fontsize">Our second and third terms were spent preparing for the National Dance Championships and Twilight Competitions where the girls picked up several awards” Thank you to everyone!</p>
-                    <img src="assets/images/NationalDanceChamps.jpg" alt="National Dance Champs" class="center pic1">
+                    <img src="assets/images/national_dance_champs.jpg" alt="National Dance Champs" class="center pic1">
                 </div>
                 <div class="col-lg-6">
                     <h6 class="newsheader">Perm masterclass</h6>
                     <p class="fontsize">Congratulations to the students who attended the recent masterclass hosted by Perm state ballet. Great experience for all our students.</p>
                     <video class="video center" controls>
-                        <source src="assets/images/Video.mp4" type="video/mp4">
+                        <source src="assets/images/video.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
