--- a/testimonial.html
+++ b/testimonial.html
@@ -58,7 +58,7 @@
                 </p>
             </div>
             <div class="col-sm-hidden">
-                <img src="assets/images/Daragh.jpg" class="image">
+                <img src="assets/images/daragh.jpg" class="image">
             </div>
         </div>
         <div class="row row1">
@@ -82,7 +82,7 @@
                 </p>
             </div>
             <div class="col-sm-hidden">
-                <img src="assets/images/Catherine.jpg" class="image">
+                <img src="assets/images/catherine.jpg" class="image">
             </div>
         </div>
     </section>
