update color on contact form

--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
                 <h4 class="header text-center">Contact Details</h4>
                 <ul class="textsize">
                     <li class="col-12 text-center">Regina Rogers</li>
-                    <li class="col-12 text-center"><a href: "tel:+35391522267"><i class="fa fa-phone-square" aria-hidden="true"></i>:091 522267</a></li>
-                    <li class="col-12 text-center"><a href: "mailto:galwayballet@gmail.com"><i class="fa fa-envelope"></i>:galwayballet@gmail.com</a></li>
+                    <li class="col-12 text-center"><a href:"tel:+35391522267"><i class="fa fa-phone-square" aria-hidden="true"></i>:091 522267</a></li>
+                    <li class="col-12 text-center"><a href:"mailto:galwayballet@gmail.com"><i class="fa fa-envelope"></i>galwayballet@gmail.com</a></li>
                 </ul>
             </div>
         </div>
