minor cosmetic changes

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <header>
         <div>
             <li><i class="bars fa fa-bars"> MENU </i></li>
-            <div class="logo">
+            <div id="logo">
                 <!---logo--->
             </div>
         </div>
@@ -41,12 +41,12 @@
                 <div class="form-row text-center">
                     <div class="col center-form formbg">
                         <form id="formstyle">
-                            <INPUT type="text" Value="" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                            <INPUT type="email" Value="" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-                            <INPUT type="text" value="" name="subject" id="subject" class="form-control" placeholder="Subject" required />
+                            <input type="text" Value="" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                            <input type="email" Value="" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                            <input type="text" value="" name="subject" id="subject" class="form-control" placeholder="Subject" required />
                             <textarea rows="5" value="" name="query" id="query" class="form-control" placeholder="How can we help?" required></textarea>
-                            <INPUT type="submit" value="Submit Query" class="submit" />
-                            <INPUT type="reset" value="Reset Form" class="reset" />
+                            <input type="submit" value="Submit Query" class="submit" />
+                            <input type="reset" value="Reset Form" class="reset" />
                         </form>
                     </div>
                 </div>
@@ -55,8 +55,8 @@
                 <h4 class="header text-center">Contact Details</h4>
                 <ul class="textsize">
                     <li class="col-12 text-center">Regina Rogers</li>
-                    <li class="col-12 text-center"><a href:"tel:+35391522267"><i class="fa fa-phone-square" aria-hidden="true"></i>:091 522267</a></li>
-                    <li class="col-12 text-center"><a href:"mailto:galwayballet@gmail.com"><i class="fa fa-envelope"></i>galwayballet@gmail.com</a></li>
+                    <li class="col-12 text-center"><a href: "tel:+35391522267"><i class="fa fa-phone-square" aria-hidden="true"></i>:091 522267</a></li>
+                    <li class="col-12 text-center"><a href: "mailto:galwayballet@gmail.com"><i class="fa fa-envelope"></i>galwayballet@gmail.com</a></li>
                 </ul>
             </div>
         </div>
@@ -68,20 +68,20 @@
                 We have classes in Galway City and Knocknacarra.
                 <br> Contact Us:
                 <a href="Contact.html" target="_blank">
-                     <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
-                    </a>
+                    <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
+                </a>
                 <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
-                            <i class="fa fa-facebook infobutton" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
+                    <i class="fa fa-facebook infobutton" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                </a>
                 <a target="_blank" href="https://twitter.com/Twitter">
-                            <i class="fa fa-twitter infobutton" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
+                    <i class="fa fa-twitter infobutton" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter</span>
+                </a>
                 <a target="_blank" href="https://www.instagram.com/instagram/">
-                            <i class="fa fa-instagram infobutton" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
+                    <i class="fa fa-instagram infobutton" aria-hidden="true"></i>
+                        <span class="sr-only">Instagram</span>
+                </a>
             </p>
         </div>
     </footer>
