--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div id="logo">
             <li><i class="bars fa fa-bars"> MENU </i></li>
         </div>
         <div>
@@ -55,7 +55,6 @@
                     keen to establish their Russian Ballet Examination Syllabus with my school. Of course this will take time but it is a fantastic opportunity and honour for us. Thank you Aleksey Miroshnichenko, Artistic Director of Perm State Ballet.
                 </p>
             </div>
-
         </div>
     </section>
     <footer>
@@ -65,26 +64,26 @@
                 We have classes in Galway City and Knocknacarra.
                 <br> Contact Us:
                 <a href="Contact.html" target="_blank">
-                     <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
-                    </a>
+                    <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
+                </a>
                 <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
-                            <i class="fa fa-facebook infobutton" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
+                    <i class="fa fa-facebook infobutton" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                </a>
                 <a target="_blank" href="https://twitter.com/Twitter">
-                            <i class="fa fa-twitter infobutton" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
+                    <i class="fa fa-twitter infobutton" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter</span>
+                </a>
                 <a target="_blank" href="https://www.instagram.com/instagram/">
-                            <i class="fa fa-instagram infobutton" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
+                    <i class="fa fa-instagram infobutton" aria-hidden="true"></i>
+                        <span class="sr-only">Instagram</span>
+                </a>
             </p>
         </div>
     </footer>
-
     <script src="app.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
