--- a/testimonial.html
+++ b/testimonial.html
@@ -17,7 +17,7 @@
     <header>
         <div>
             <li><i class="bars fa fa-bars"> MENU </i></li>
-            <div class="logo">
+            <div id="logo">
                 <!---logo--->
             </div>
         </div>
@@ -93,20 +93,20 @@
                 We have classes in Galway City and Knocknacarra.
                 <br> Contact Us:
                 <a href="Contact.html" target="_blank">
-                     <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
-                    </a>
+                    <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
+                </a>
                 <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
-                            <i class="fa fa-facebook infobutton" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
+                    <i class="fa fa-facebook infobutton" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                </a>
                 <a target="_blank" href="https://twitter.com/Twitter">
-                            <i class="fa fa-twitter infobutton" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
+                    <i class="fa fa-twitter infobutton" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter</span>
+                </a>
                 <a target="_blank" href="https://www.instagram.com/instagram/">
-                            <i class="fa fa-instagram infobutton" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
+                    <i class="fa fa-instagram infobutton" aria-hidden="true"></i>
+                        <span class="sr-only">Instagram</span>
+                </a>
             </p>
         </div>
     </footer>
