--- a/testimonial.html
+++ b/testimonial.html
@@ -92,7 +92,7 @@
             <p class="inline-block footermessage">
                 We have classes in Galway City and Knocknacarra.
                 <br> Contact Us:
-                <a href="Contact.html" target="_blank">
+                <a href="contact.html" target="_blank">
                     <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
                 </a>
                 <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
