minor changes to layout

--- a/testimonial.html
+++ b/testimonial.html
@@ -36,7 +36,7 @@
         <h2 class="heading">Testimonials</h2>
         <div class="row row1">
             <div class="col-sm-hidden">
-                <img src="assets/images/laura.jpg" class="image">
+                <img src="assets/images/laura.jpg" alt="Laura Gaffney" class="image">
             </div>
             <div class="testimonials">
                 <h5 class="testhead">Laura Gaffney</h5>
@@ -58,12 +58,12 @@
                 </p>
             </div>
             <div class="col-sm-hidden">
-                <img src="assets/images/daragh.jpg" class="image">
+                <img src="assets/images/daragh.jpg" alt="Daragh Keaveney" class="image">
             </div>
         </div>
         <div class="row row1">
             <div class="col-sm-hidden">
-                <img src="assets/images/gabriella.jpg" class="image">
+                <img src="assets/images/gabriella.jpg" alt="Gabriella Markov" class="image">
             </div>
             <div class="testimonials paragraph">
                 <h5 class="testhead">Gabriella Markov</h5>
@@ -82,7 +82,7 @@
                 </p>
             </div>
             <div class="col-sm-hidden">
-                <img src="assets/images/catherine.jpg" class="image">
+                <img src="assets/images/catherine.jpg" alt="Catherine Walsh" class="image">
             </div>
         </div>
     </section>
